feat: change index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <p>just test</p>
+    <header>
+        <h1>Evgeniy Shamin</h1>
+        <nav>
+            <a href="#">link</a>
+            <a href="#">link</a>
+            <a href="#">link</a>
+            <a href="#">link</a>
+            <a href="#">link</a>
+            <a href="#">link</a>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>About me </h2>
+            <figure>
+                <img src="images/me.jpg" width="200" alt="me">
+                <figcaption>Evgeniy Shamin</figcaption>
+            </figure>
+            <p>
+                Имя и фамилия
+            </p>
+
+        </section>
+        <section>
+            <h2>Contacts </h2>
+            <p>
+                Контакты для связи
+            </p>
+
+        </section>
+        <section>
+            <h2>Коротко о себе</h2>
+            <div>
+                <p>
+                    Краткая информация о себе (ваша цель и приоритеты, подчеркните свои сильные стороны, расскажите о
+                    своём опыте работы, если опыта работы нет, расскажите о своём стремлении учиться и узнавать новое)
+                </p>
+            </div>
+        </section>
+        <section>
+            <h2>Навыки</h2>
+            <div>
+                <p>
+                    Навыки (языки программирования, фреймворки, методологии, системы контроля версий и инструменты
+                    разработки, которыми вы владеете)
+                </p>
+            </div>
+        </section>
+        <section>
+            <h2>Пример кода</h2>
+            <div>
+                <code>
+                    <pre>
+                    Примеры кода
+                   </pre>
+                </code>
+            </div>
+        </section>
+        <section>
+            <h2>Опыт работы</h2>
+            <div>
+                <p>
+                    Опыт работы. Junior Dev может перечислить учебные проекты с указанием использованных навыков и
+                    ссылками на исходный код.
+                </p>
+            </div>
+        </section>
+        <section>
+            <h2>Образование</h2>
+            <div>
+                <p>
+                    Образование (включая пройденные курсы и тренинги)
+                </p>
+            </div>
+        </section>
+
+        <section>
+            <h2>English</h2>
+            <div>
+                <p>
+                    Английский язык (уровень английского языка, если была языковая практика, расскажите о ней)
+                </p>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+        <a href="https://rs.school/js/" title>Курс «JavaScript/Front-end»</a>
+        <img class="logo" alt="logo" width="100" src="https://rs.school/images/rs_school_js.svg">
+    </footer>
+
 </body>
+
 </html>
