feat: new draft

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <header>
         <h1>Evgeniy Shamin</h1>
         <nav>
@@ -26,7 +27,7 @@
         <section>
             <h2>About me </h2>
             <figure>
-                <img src="images/me.jpg" width="150" alt="me">
+                <img class="out-path" src="images/me.jpg" width="200" alt="me">
                 <figcaption>Evgeniy Shamin</figcaption>
             </figure>
             <p>
