--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
 
     <header>
-        <h1>Evgeniy Shamin</h1>
+        <div>
+            <h1>Evgeniy Shamin</h1>
+            <span>Web developer</span>
+        </div>
         <nav>
             <a href="#">link</a>
             <a href="#">link</a>
@@ -24,6 +27,7 @@
     </header>
 
     <main>
+
         <section>
             <h2>About me </h2>
             <figure>
@@ -35,6 +39,7 @@
             </p>
 
         </section>
+
         <section>
             <h2>Contacts </h2>
 
