fix: correct pach

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
         <nav>
             <ul>
-                <li><a href="/#about">About</a></li>
-                <li><a href="/#contacts">Contacts</a></li>
-                <li><a href="/#skills">Skills</a></li>
-                <li><a href="/#expirience">Expirience</a></li>
-                <li><a href="/#code">Code</a></li>
-                <li><a href="/#languages">Languages</a></li>
-                <li><a href="/#edu">Education</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#expirience">Expirience</a></li>
+                <li><a href="#code">Code</a></li>
+                <li><a href="./#languages">Languages</a></li>
+                <li><a href="./#edu">Education</a></li>
             </ul>
         </nav>
     </header>
