fix: last fixes

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#expirience">Expirience</a></li>
                 <li><a href="#code">Code</a></li>
-                <li><a href="./#languages">Languages</a></li>
-                <li><a href="./#edu">Education</a></li>
+                <li><a href="#languages">Languages</a></li>
+                <li><a href="#edu">Education</a></li>
             </ul>
         </nav>
     </header>
